<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.MedocAddListView">

    <Button
        android:id="@+id/Confirm_Add_Medoc_To_List"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="292dp"
        android:layout_marginTop="664dp"
        android:text="@string/Confirm_Add_Medoc_To_List"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="25dp"
        android:text="@string/Title_un"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="110dp"
        android:text="@string/Label_Medoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goToMedocDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="124dp"
        android:text="@string/Add_Medoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="256dp"
        android:text="@string/Dates"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="440dp"
        android:text="@string/Prises"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CheckBox_Matin_To_List"
        android:layout_width="114dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="508dp"
        android:text="@string/MedocMatin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CheckBox_Midi_To_List"
        android:layout_width="114dp"
        android:layout_height="49dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="564dp"
        android:text="@string/MedocMidi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/CheckBox_Soir_To_List"
        android:layout_width="114dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="616dp"
        android:text="@string/MedocSoir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date_Debut"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="296dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date_Fin"
        android:layout_width="347dp"
        android:layout_height="47dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="352dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/Spinner_Medocs"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>